--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
 <body>
     <div class="container">
         <h1>Kroulette</h1>
-        <p>Your Random Spotify Song Picker</p>
+        <p style="color: #1DB954;">Connect with friends to find random common songs to sing together!</p>
         
         {% with messages = get_flashed_messages() %}
             {% if messages %}
@@ -28,5 +28,25 @@
         </div>
         {% endif %}
     </div>
+    
+    <style>
+        .footer {
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+            text-align: center;
+            padding: 10px;
+            background-color: transparent;
+        }
+        .footer hr {
+            width: max-content;
+            margin: 0 auto;
+            border-color: black;
+        }
+    </style>
+    <footer class="footer">
+        <hr>
+        <p>&copy; 2025 Kroulette by Richard Fan <a href="https://open.spotify.com" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/8/84/Spotify_icon.svg" alt="Spotify Logo" style="width: 20px; vertical-align: middle;"></a></p>
+    </footer>
 </body>
 </html>
