--- a/templates/loading.html
+++ b/templates/loading.html
@@ -82,6 +82,19 @@
         .retry-button:hover {
             background-color: #1ed760;
         }
+        .footer {
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+            text-align: center;
+            padding: 10px;
+            background-color: transparent;
+        }
+        .footer hr {
+            width: max-content;
+            margin: 0 auto;
+            border-color: black;
+        }
     </style>
 </head>
 <body>
@@ -136,13 +149,16 @@
                 })
                 .catch(error => {
                     console.error('Error checking loading status:', error);
-                    document.getElementById('error-message').textContent = 'Error checking loading status. Please refresh the page.';
-                    document.getElementById('error-message').style.display = 'block';
+                    window.location.href = 'https://kroulette.onrender.com';
                 });
         }
 
         // Start checking loading status
         checkLoadingStatus();
     </script>
+    <footer class="footer">
+        <hr>
+        <p>&copy; 2025 Kroulette by Richard Fan <a href="https://open.spotify.com" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/8/84/Spotify_icon.svg" alt="Spotify Logo" style="width: 20px; vertical-align: middle;"></a></p>
+    </footer>
 </body>
 </html>
